<resources>
    <!--    Keys    &   Fixed    -->
    <!--    -->
    <!--    Keys    -->

    <string name="app_name">FAO</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="dialog_ok">OK</string>
    <string name="title">Title</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="forgot_your_password">forgot your password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_username">please enter username</string>
    <string name="enter_password">please enter password</string>

    <string name="login_title">Please enter login details</string>
    <string name="login_title_2">to enter to the app</string>
    <string name="file_number">file number</string>
    <string name="information_about_user">Information about applicant</string>


    <string name="applicant">Applicant</string>
    <string name="place_dob">Place and date of birth</string>

    <string name="farmer_address">The farmer\'s address</string>
    <string name="phone_nbr">Telephone number</string>
    <string name="block_nbr">Block number</string>
    <string name="agent">Agents</string>

    <string name="applicant_agent">Applicant agent</string>
    <string name="concerned_person">The concerned person / trustee / agent</string>

    <string name="record_number">Record number and location</string>

    <string name="financial_assistant">Financial assistance previously granted to farmers</string>

    <string name="order_nbr">Order number</string>

    <string name="its_date">Date</string>

    <string name="its_type">Type	</string>
    <string name="its_initial_value">Initial value</string>
    <string name="its_current_value">Current Value</string>
    <string name="status_reclaimed"> The status of farms and real estate to be reclaimed</string>


    <string name="total_area">Total area</string>
    <string name="total_percecntage">The percentage property	    </string>
    <string name="soil"> the soil</string>
    <string name="rock_type"> Rock type		</string>
    <string name="rock_ratio">Rock ratio</string>
    <string name="gradient">gradient		</string>
    <string name="show_off"> Show off</string>
    <string name="land_class"> Land class	    </string>
    <string name="hubby_irr"> Hubby / irr	    </string>
    <string name="height_sea"> Height above sea level</string>


    <string name="used_tractor">   Used tractor	</string>
    <string name="contractor_name"> Contractor name</string>
    <string name="tractor_type">The type of tractor		</string>
    <string name="tractor_icon">Tractor icon	</string>
    <string name="agreement_number">Agreement number	</string>
    <string name="agreement_history">   History of the agreement	</string>
    <string name="agreement_value">Agreement value	</string>


    <string name="list_of_attachments">List of attachments</string>
    <string name="save">Save</string>
    <string name="choose_file">Choose file</string>
    <string name="file_name">file name</string>
    <string name="view">View</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="signature">Signature</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>

    <string name="permission_denied">Permission denied</string>
    <string name="please_sign">Please sign to continue your process</string>

    <string name="order_list">Order List</string>
    <string name="farmer_name">Farmer name</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="order_number">Order number</string>
    <string name="block_number">Block number</string>
    <string name="order_status">Order type</string>
    <string name="comfirm_status">Confirm Status</string>
    <string name="find">Search</string>
    <string name="add_new_order">Add new Order</string>
    <string name="farmer">Farmer</string>
    <string name="date">Date</string>
    <string name="block">Block</string>
    <string name="stop">Stop</string>
    <string name="step">Step</string>
    <string name="work_plan">Work plan</string>
    <string name="print">Print</string>
    <string name="order">Order</string>
    <string name="estimated_technical_examination">Estimated technical examination</string>
    <string name="index">Index</string>
    <string name="accounting">Accounting</string>
    <string name="order_pay">Payment Order</string>
    <string name="order_work">Work Order</string>
    <string name="request_business">Business request</string>
    <string name="receipt_business_record">business record receipt</string>


    <string name="spinner_order_status_1">Applicable applications</string>
    <string name="spinner_order_status_2">Stopped requests</string>
    <string name="spinner_order_status_3">All requests</string>


    <string name="spinner_status_confirm_1">In progress</string>
    <string name="spinner_status_confirm_2">All requests</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="enter_your_e_mail_address">Enter your E-mail Address</string>
    <string name="back_to_login">Back to login</string>
    <string name="send_reset_password">Send Reset Password</string>
    <string name="last_step_notes">Last Step Notes</string>
    <string name="role">Role</string>
    <string name="general_clarifications">General Clarifications</string>

    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>


    <string name="order_info">Order Info</string>
    <string name="decision_number_commity_receiving">Decision number of comity receiving </string>
    <string name="date_commity_receiving">Date Comity Receiving</string>
    <string name="work_recive_date">Work receive date</string>
    <string name="work_list_needed">Work list needed</string>
    <string name="nbr_of_units_executed">Number of units executed</string>
    <string name="unit_price">unit price</string>
    <string name="total_value">Total value</string>
    <string name="work_type">Work type</string>
    <string name="status">Status</string>
    <string name="block_coordinates">Block coordinates</string>

    <string name="pre_graph">Pre Graph</string>
    <string name="after_graph">After graph</string>
    <string name="enter_coordinates">Enter Block coordinates</string>
</resources>
