<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="@dimen/item_header">



    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font"
        android:textColor="@color/gray_text_dark"
        android:text="@string/file_name"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"/>


    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font"
            android:textColor="@color/gray_text_dark"
            android:text="@string/view"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"/>



    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font"
            android:textColor="@color/gray_text_dark"
            android:text="@string/delete"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"/>

</LinearLayout>