<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="@dimen/item_header"

        android:background="@drawable/rectangular_primary"
        >

    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"

            />

    <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary"/>




    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray_text_dark"
            android:gravity="center_vertical"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/font"
            android:text="@string/block_nbr"
            />

    <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary"/>



    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray_text_dark"
            android:gravity="center_vertical"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/font"
            android:text="@string/work_type"
            />

    <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary"/>




    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray_text_dark"
            android:gravity="center_vertical"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/font"
            android:text="@string/nbr_of_units_executed"
            />

    <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary"/>




    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray_text_dark"
            android:gravity="center_vertical"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/font"
            android:text="@string/unit_price"
            />

    <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary"/>



    <com.ids.fao.custom.CustomTextViewMedium
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray_text_dark"
            android:gravity="center_vertical"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/font"
            android:text="@string/total_value"
            />




</LinearLayout>