<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:id="@+id/rlRoot"
        android:layout_height="match_parent">



    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/big_margin"
            >



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="horizontal"
                android:padding="@dimen/mini_margin"
                android:layout_marginTop="15dp"

                android:background="@drawable/rectangular_dash_primary">




        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"


                android:orientation="horizontal"
                android:padding="@dimen/mini_margin"
                android:id="@+id/rlSignature"
             />















<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:textColor="@color/white"
        android:textSize="@dimen/font"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/clear"
        android:id="@+id/btClear"
        />


        </LinearLayout>

        <com.ids.fao.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_dash_height"
                android:paddingLeft="@dimen/big_margin"
                android:paddingRight="@dimen/big_margin"
                android:gravity="center_vertical"
                android:textColor="@color/primary"
                android:text="@string/signature"
                android:background="@drawable/round_corder_dash_primary"
                android:layout_marginLeft="@dimen/big_margin"
                android:layout_marginStart="@dimen/big_margin"

                />
    </RelativeLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/second_margin"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingRight="40dp"
            android:paddingEnd="40dp"
            >


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/second_margin"
                android:layout_marginLeft="@dimen/second_margin"
                android:background="@drawable/button_save"
                android:text="@string/save"
                android:id="@+id/btSave"
                android:textColor="@color/white" />



        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/second_margin"
                android:layout_marginLeft="@dimen/second_margin"
                android:background="@drawable/button_cancel"
                android:text="@string/back"
                android:id="@+id/btBack"
                android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>