<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/gray_bg"
        android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin"

                >

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    android:background="@color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    app:cardUseCompatPadding="true"
                    android:padding="@dimen/normal_margin"
                    android:layout_gravity="center"
                    app:cardCornerRadius="2dp"


                    >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/normal_margin"
                        android:background="@color/white"
                        >


                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            >



                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:layout_marginLeft="@dimen/normal_margin"
                                android:layout_marginRight="@dimen/normal_margin"
                                android:layout_marginBottom="@dimen/normal_margin"
                                android:orientation="vertical"
                                android:padding="@dimen/second_margin"
                                android:background="@drawable/rectangular_dash_primary">


                            <com.ids.fao.custom.CustomTextViewMedium
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                   android:layout_marginTop="@dimen/big_margin"
                                android:text="@string/enter_coordinates"
                                android:textSize="@dimen/font"
                                android:textColor="@color/gray_text_dark"/>


                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginTop="@dimen/big_margin"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal">

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"

                                        android:layout_weight="1"
                                        android:gravity="center_vertical"
                                        android:orientation="horizontal">

                                    <com.ids.fao.custom.CustomTextViewBold
                                            android:layout_width="@dimen/title_width"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:gravity="center"
                                            android:text="X"
                                            android:textColor="@color/black"


                                            android:textSize="@dimen/font" />



                                    <EditText
                                            android:layout_width="0dp"
                                            android:layout_height="@dimen/etHeight"
                                            android:layout_gravity="center_vertical"
                                            android:layout_marginStart="@dimen/mini_margin"
                                            android:layout_marginLeft="@dimen/mini_margin"
                                            android:enabled="false"
                                            android:layout_weight="1"
                                            android:background="@drawable/rectangular_white_border_gray"
                                            android:gravity="center_vertical"
                                            android:paddingStart="@dimen/normal_margin"
                                            android:paddingLeft="@dimen/normal_margin"
                                            android:textColor="@color/gray_text_dark"
                                            android:textSize="@dimen/font"

                                            />

                                </LinearLayout>

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:layout_weight="1"
                                        android:gravity="center_vertical"
                                        android:orientation="horizontal">

                                    <com.ids.fao.custom.CustomTextViewBold
                                            android:layout_width="@dimen/title_width"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_marginStart="@dimen/normal_margin"
                                            android:layout_marginLeft="@dimen/normal_margin"
                                            android:gravity="center"
                                            android:text="Y"
                                            android:textColor="@color/black"


                                            android:textSize="@dimen/font" />



                                    <EditText
                                            android:layout_width="0dp"
                                            android:layout_height="@dimen/etHeight"
                                            android:layout_gravity="start"
                                            android:layout_marginStart="@dimen/mini_margin"
                                            android:layout_marginLeft="@dimen/mini_margin"
                                            android:layout_weight="1"
                                            android:background="@drawable/rectangular_white_border_gray"

                                            android:gravity="center_vertical"
                                            android:paddingStart="@dimen/normal_margin"
                                            android:paddingLeft="@dimen/normal_margin"
                                            android:textColor="@color/gray_text_dark"
                                            android:textSize="@dimen/font"

                                            />

                                </LinearLayout>


                                <LinearLayout
                                        android:layout_width="@dimen/title_width"
                                        android:layout_height="wrap_content"
                                        />

                            </LinearLayout>







                        </LinearLayout>

                        <com.ids.fao.custom.CustomTextViewMedium
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/title_dash_height"
                                android:paddingLeft="@dimen/big_margin"
                                android:paddingRight="@dimen/big_margin"
                                android:gravity="center_vertical"
                                android:textColor="@color/primary"
                                android:text="@string/block_coordinates"
                                android:background="@drawable/round_corder_dash_primary"
                                android:layout_marginLeft="@dimen/big_margin"
                                android:layout_marginStart="@dimen/big_margin"

                                />
                    </RelativeLayout>




                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="@dimen/second_margin"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:paddingRight="@dimen/big_margin"
                            android:paddingEnd="@dimen/big_margin"
                            >


                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/second_margin"
                                android:layout_marginLeft="@dimen/second_margin"
                                android:background="@drawable/button_save"
                                android:text="@string/save"
                                android:textColor="@color/white" />



                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/second_margin"
                                android:layout_marginLeft="@dimen/second_margin"
                                android:background="@drawable/button_cancel"
                                android:text="@string/cancel"
                                android:textColor="@color/white" />


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</LinearLayout>